<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_thin"
        android:text="@string/self_gratitude_journal"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:elevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="9dp"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/gratefulText"
                android:layout_gravity="center"
                android:text="@string/grateful_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <Button
        android:id="@+id/startButton"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:text="@string/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>